adjustmen  docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,17 @@ services:
       context: .
     ports:
       - "${HOST_API_PORT}:9093"
-    container_name: api
     volumes:
-      - ${ENV_FILE}:/.env
+      - ${ENV_FILE}:/root/.env:Z
     depends_on:
-      - redis
+      - redis-saceri
       - mongodb
     networks:
       - saceri-net
       - worker-auth
 
-  redis:
+  redis-saceri:
     image: redis:latest
-    container_name: redis
     ports:
       - "6379:6379" # Default Redis port
     networks:
@@ -29,18 +27,15 @@ services:
 
   mongodb:
     image: mongo:latest
-    container_name: mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${DATABASE_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${DATABASE_PASSWORD}
-    network_mode: host
     ports:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
-
-
-
+    networks:
+      - saceri-net
 
 networks:
   saceri-net:
